# creative_design_3

./: README.md
devel/: setup.sh
devel/lib/controller_manager/: controller_group  unspawner
devel/lib/controller_manager_tests/: cm_test  dummy_app
devel/lib/covid_robot_bringup/: turtlebot3_diagnostics
devel/lib/covid_robot_gazebo/: covid_robot_drive
devel/lib/covid_robot_waypoints/: covid_robot_waypoints
devel/lib/four_wheel_steering_controller/: four_wheel_steering
devel/lib/pkgconfig/: combined_robot_hw.pc  combined_robot_hw_tests.pc  controller_interface.pc  controller_manager.pc  controller_manager_msgs.pc  controller_manager_tests.pc  covid_robot_bringup.pc  (+20 more)
src/covid_robot_bringup/: CMakeLists.txt  package.xml
src/covid_robot_description/: CMakeLists.txt  package.xml
src/covid_robot_description/meshes/bases/: body_side.stl  body_side_rack.stl  body_with_tire.stl  cleaning.stl  covid_robot_body.stl  total_assemble.stl
src/covid_robot_description/meshes/wheels/: covid_robot_tire.stl  steering_motor.stl
src/covid_robot_description/urdf/: covid_robot.gazebo.xacro  covid_robot.gazebo_backup.xacro  covid_robot.urdf.xacro  covid_robot.urdf_backup.xacro  covid_robot.urdf_turtlebot.xacro  covid_robot_backup.urdf.xacro  covid_robot_backup2.urdf.xacro  covid_robot_error_backup.urdf.xacro  covid_robot_with_tire.urdf.xacro  turtlebot3_waffle.urdf.xacro
src/covid_robot_navigation/: CMakeLists.txt
src/covid_robot_teleop/: turtlebot3_teleop_key
src/covid_robot_waypoints/: CMakeLists.txt
src/simple_navigation_goals/: CMakeLists.txt  package.xml
(+66 files in other folders)
